--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Acomertipico</string>
+    <string name="txt_bienvenido">Aquí podrás encontrar diversas comidas típicas del Cauca, te invitamos a que revises los productos de nuestros restaurantes afiliados y recetas</string>
 </resources>
